Added Table and Pointer

--- a/FED1STUDIOProject/Classes.html
+++ b/FED1STUDIOProject/Classes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <link href="StyleSheet/Style.css" rel="stylesheet" />
+    <link href="StyleSheets/Style.css" rel="stylesheet" />
 </head>
 <body>
     <header class="header">
@@ -25,13 +25,13 @@
     </div>
     <main>
         <div class="wrapper">
-            <div class="box1">
+            <div class="box1" style="cursor: pointer">
                 <h3>DPS</h3>
                 <img src="Images/dragoon.png" width="235" height="180" />
                 <p>Quina reflect sin shooting star mythril ore thunder mythril helm Quetzalli corsair. Snow esuna moogle ehrgeiz echo screen death tin armour Hades dragoon. Galuf slow ultima weapon godhand poison fang water demon's mail Carbuncle monk.</p>
             </div>
 
-            <div class="box2">
+            <div class="box2" style="cursor: pointer">
                 <h3>Tanking</h3>
                 <img src="Images/paladin.png" width="235" height="180" />
                 <p>
@@ -39,26 +39,26 @@
                 </p>
             </div>
 
-            <div class="box3">
+            <div class="box3" style="cursor: pointer">
                 <h3>Healing</h3>
                 <img src="Images/whitemage.png" width="235" height="180" />
                 <p>
                     Tidus blizzard gilgamesh shooting star eye drops hastega chain mail Yojimbo samurai. Fran death bahamut spirit lance hi-potion ultima power wrist Yojimbo paladin. Kiros blizzara judges ultima weapon mythril ore full-life bronze vest Fenir ranger.
                 </p>
             </div>
-            <div class="box4">
+            <div class="box4" style="cursor: pointer">
                 <h3>Crafting</h3>
                 <img src="Images/blacksmith.png" width="235" height="180" />
                 <p>Rude blizzaga gilgamesh spirit lance blossom crown thunder bronze vest Leviathan ninja. Marcus firaga moogle tiger racket mega-phoenix cure dragon wrist Shiva bard. Lenna protect magus sisters hp shout mega-ether shell ritual hat Siren thief.</p>
             </div>
 
-            <div class="box5">
+            <div class="box5" style="cursor: pointer">
                 <h3>Gathering</h3>
                 <img src="Images/miner.png" width="235" height="180" />
                 <p>Vaan flare behemoth shooting star map life mythril armlet Titan white mage. Fang watera sin hp shout remedy bio mythril helm Garuda beastmaster. Sephiroth curaga malboro shooting star water crystal summon white robe Ixion blue mage.</p>
             </div>
 
-            <div class="box6">
+            <div class="box6" style="cursor: pointer">
                 <h3>RolePlay</h3>
                 <img src="Images/RP.png" width="235" height="180" />
                 <p>
@@ -68,6 +68,68 @@
             </div>
 
         </div>
+
+        <table>
+
+            <thread>
+
+                <tr>
+                    <th colspan="4"></th>
+                </tr>
+                <tr>
+                    <th>#</th>
+                    <th>Class</th>
+                    <th>Instructor</th>
+                    <th>Meets</th>
+                </tr>
+            </thread>
+            <tbody>
+
+                <tr>
+                    <td>1</td>
+                    <td>TANKING</td>
+                    <td>TO BE NAMED</td>
+                    <td>M-W 8-5</td>
+                </tr>
+
+                <tr>
+                    <td>2</td>
+                    <td>DPS</td>
+                    <td>TO BE NAMED</td>
+                    <td>W-F 8-5</td>
+                </tr>
+
+                <tr>
+                    <td>3</td>
+                    <td>HEALING</td>
+                    <td>TO BE NAMED</td>
+                    <td>M-W 8-5</td>
+                </tr>
+
+                <tr>
+                    <td>4</td>
+                    <td>GATHERING</td>
+                    <td>TO BE NAMED</td>
+                    <td>W-F 8-5</td>
+                </tr>
+
+                <tr>
+                    <td>5</td>
+                    <td>CRAFTING</td>
+                    <td>TO BE NAMED</td>
+                    <td>M-W 8-5</td>
+                </tr>
+
+                <tr>
+                    <td>6</td>
+                    <td>ROLEPLAY</td>
+                    <td>TO BE NAMED</td>
+                    <td>W-F 8-5</td>
+                </tr>
+
+            </tbody>
+
+        </table>
 
     </main>
 
