--- a/FED1STUDIOProject/Contact.html
+++ b/FED1STUDIOProject/Contact.html
@@ -2,47 +2,54 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="author" content="Joshua Foley" />
     <title></title>
-    <link href="StyleSheets/Style1.css" rel="stylesheet" />
+    <link href="StyleSheets/Style.css" rel="stylesheet" />
 </head>
 <body>
     <header>
-        <h1> Crystal Learning  <img src="Images/F.jpg" width="60" height="60" /></h1>
+        <h1> Crystal Learning   <img src="Images/F.jpg" width="60" height="60" /></h1>
 
         <p>Soak in the light of Knowledge</p>
     </header>
-    <nav>
-        <ul>
-            <li><a href="Index.html">Home</a></li>
-            <li><a href="Classes.html">Classes</a></li>
-            <li><a href="Team.html">Team</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-        </ul>
-    </nav>
+    <div>
+        <nav>
+            <ul>
+                <li><a href="Index.html">Home</a></li>
+                <li><a href="Classes.html">Classes</a></li>
+                <li><a href="Team.html">Team</a></li>
+                <li><a href="Contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
     <main>
+
+        <p>
+            <h4> This is a test project to learn to code a website with just HTML and CSS</h4>
+        </p>
         <section>
+            <h2>Loaction</h2>
             <p>
-                <h4> This is a test project to learn to code a website with just HTML and CSS</h4>
-            </p>
-            <h2 color="red">Loaction</h2>
-            <p color="white">
                 1740 W 92nd Street, Kansas City, MO 64114
             </p>
             <h1>Contact Us!</h1>
             <div>
-                <ul>
-                    <li><a href="tel:816-857-539">Call Us</a></li>
-                    <li><a href="mailto:learning@smallbiz.com">Email</a></li>
-                    <li><a href="https://mobile.twitter.com/weteachstuff">Twitter</a></li>
-                    <li><a href="https://www.facebook.com/learnwithus">Facebook</a></li>
-                    <li><a href="http://www.linkedin.com/learnwithus">Linkedin</a></li>
-                </ul>
+
+                <a href="tel:816-857-539">Call Us</a>
+                <br />
+                <a href="mailto:learning@smallbiz.com">Email</a>
+                <br />
+                <a href="https://mobile.twitter.com/weteachstuff">Twitter</a>
+                <br />
+                <a href="https://www.facebook.com/learnwithus">Facebook</a>
+                <br />
+                <a href="http://www.linkedin.com/learnwithus">Linkedin</a>
             </div>
         </section>
+
     </main>
+
     <footer>
-        &copy; Copyright 2021 Joshua Foley <br />
+        &copy; Copyright 2021 Joshua Foley. All Rights Reserved. <br />
     </footer>
 </body>
 </html>
