--- a/FED1STUDIOProject/Index.html
+++ b/FED1STUDIOProject/Index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <link href="StyleSheet/Style.css" rel="stylesheet" />
+    <link href="StyleSheets/Style.css" rel="stylesheet" />
 </head>
 <body>
     <header class="header">
         <div>
             <h1> Crystal Learning   <img src="Images/F.jpg" width="60" height="60" /></h1>
-
+            <i class="fab fa-facebook"></i>
             <p>Soak in the light of Knowledge</p>
         </div>
     </header>
