--- a/FED1STUDIOProject/Team.html
+++ b/FED1STUDIOProject/Team.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <link href="StyleSheet/Style.css" rel="stylesheet" />
+    <link href="StyleSheets/Style.css" rel="stylesheet" />
 </head>
 <body>
     <header>
