Added Actual Text

--- a/FED1STUDIOProject/Classes.html
+++ b/FED1STUDIOProject/Classes.html
@@ -27,43 +27,45 @@
         <div class="wrapper">
             <div class="box1" style="cursor: pointer">
                 <h3>DPS</h3>
+                <p>
                 <img src="Images/dragoon.png" width="235" height="180" />
-                <p>Quina reflect sin shooting star mythril ore thunder mythril helm Quetzalli corsair. Snow esuna moogle ehrgeiz echo screen death tin armour Hades dragoon. Galuf slow ultima weapon godhand poison fang water demon's mail Carbuncle monk.</p>
+                Learn the Art of DPS! From positionals to how to handle certain mechanics for max Up Time!</p>
             </div>
 
             <div class="box2" style="cursor: pointer">
                 <h3>Tanking</h3>
-                <img src="Images/paladin.png" width="235" height="180" />
                 <p>
-                    Ward slow behemoth ehrgeiz echo screen regen bronze armor Quetzalli white mage. Rinoa limit break tonberry princess guard tent slow leather shirt Garuda blue mage. Bartz blizzara gilgamesh ultima weapon smoke bomb thunder silk robe Bahamut black mage.
+                <img src="Images/paladin.png" width="235" height="180" />
+                   Keep the party safe! Learn everything from cooldown management to Tank swapping with ease.
                 </p>
             </div>
 
             <div class="box3" style="cursor: pointer">
                 <h3>Healing</h3>
-                <img src="Images/whitemage.png" width="235" height="180" />
                 <p>
-                    Tidus blizzard gilgamesh shooting star eye drops hastega chain mail Yojimbo samurai. Fran death bahamut spirit lance hi-potion ultima power wrist Yojimbo paladin. Kiros blizzara judges ultima weapon mythril ore full-life bronze vest Fenir ranger.
+                <img src="Images/whitemage.png" width="235" height="180" />
+                    The Life of the Party! We will teach you how to heal under pressure and how to work with a co-healer.
                 </p>
             </div>
             <div class="box4" style="cursor: pointer">
                 <h3>Crafting</h3>
+                <p>
                 <img src="Images/blacksmith.png" width="235" height="180" />
-                <p>Rude blizzaga gilgamesh spirit lance blossom crown thunder bronze vest Leviathan ninja. Marcus firaga moogle tiger racket mega-phoenix cure dragon wrist Shiva bard. Lenna protect magus sisters hp shout mega-ether shell ritual hat Siren thief.</p>
+                    Everything starts with supplies. Learn the value of crafting along with rotations and proper stats needed.</p>
             </div>
 
             <div class="box5" style="cursor: pointer">
                 <h3>Gathering</h3>
+                <p>
                 <img src="Images/miner.png" width="235" height="180" />
-                <p>Vaan flare behemoth shooting star map life mythril armlet Titan white mage. Fang watera sin hp shout remedy bio mythril helm Garuda beastmaster. Sephiroth curaga malboro shooting star water crystal summon white robe Ixion blue mage.</p>
+                    Fruits of the land require speical hands. Learn about timed noded, Collectable rotations and stats needed to optimize your gathering </p>
             </div>
 
             <div class="box6" style="cursor: pointer">
                 <h3>RolePlay</h3>
-                <img src="Images/RP.png" width="235" height="180" />
                 <p>
-                    Generate Text
-                    Biggs firaga behemoth tiger racket potion water thief hat Titan dark knight. Cait Sith cure magus sisters princess guard death stone thunder rubber suit Hades white mage. Ward ultima flan lion heart wind crystal slow dragon wrist Yojimbo ranger.
+                <img src="Images/RP.png" width="235" height="180" />                  
+                    Combat not your thing? Learn about the art of role play and emerise yourself in the world like never before. We teach you about character development, proper entique and how to interact with others in a whole new, yet fun, way.
                 </p>
             </div>
 
@@ -71,7 +73,7 @@
 
         <table>
 
-            <thread>
+            <thead>
 
                 <tr>
                     <th colspan="4"></th>
@@ -82,7 +84,7 @@
                     <th>Instructor</th>
                     <th>Meets</th>
                 </tr>
-            </thread>
+            </thead>
             <tbody>
 
                 <tr>
