--- a/FED1STUDIOProject/Index.html
+++ b/FED1STUDIOProject/Index.html
@@ -32,7 +32,8 @@
                 <div class="smallBox">
                     <img class="imgSmallBox" src="Images/CommonArea.png" />
                     <p>
-                        Laguna blizzard malboro missing score mog's amulet fira myrthil armor Quetzalli dark knight. Ashe haste ultros champion megalixir thunder cotton robe Garuda bard. Selphie waterga gilgamesh missing score emerald cura demon's mail Kujata samurai. Prompto cura gilgamesh ehrgeiz water crystal water diamond armor Seraph bard. Cinna auto-life bahamut onion knight ore ultima mantra band Ixion ninja. Seymour Guado slowga judges godhand gold needle life bronze helm Shiva samurai. Ward flare bomb champion turbo ether slow linen cuirass Siren black mage. Rinoa slow tonberry godhand soft slow shield armor Bahamut dancer. Shadow firaga ultros tiger racket chocobo feather water silk gloves Shiva dragoon. Penelo slow chocobo ehrgeiz gold needle summon diamond armor Leviathan corsair.
+                        Crystal Learning, An enviorment to learn about the world of Final Fantasy 14.
+                        We provide easy to understand classes with engauging teachers to create a unqiue, yet effective learning experience. With over 20 years of exeperince in the all apsects we teach across our teachers we have forged surefire way for anyone to pick-up and learn in any area they wish to start in. Step into the light of the crystal and bask in the knowledge we can offer.
                         <div class="clear"> </div>
                 </div>
             </article>
@@ -43,13 +44,14 @@
                 <div class="smallBoxR">
                     <img class="imgSmallBox" src="Images/Library.png" />
                     <p>
-                        Rikku blizzard cactuar godhand earth stone fira power wrist Yojimbo black mage. Noctis blizzard bomb godhand fire crystal regen thunder gloves Garuda thief. Faris slow magus sisters missing score death stone firaga ritual hat Quetzalli dark knight. Sephiroth blizzaga ultima weapon princess guard fire crystal summon thief gloves Siren puppetmaster. Dadaluma holy bomb premium heart hi-potion watera dragon wrist Bahamut corsair.
+                        We offer many on-site features! A fully stock library with over 1000+ books covering all topics we teach. A student finance center to aid with payment help. On campus dineing area connect to our dorms that allow students living on campus easy travel. 
+                       Top all of this with our newly renovated classrooms and we assure anyone will love it here.
                     </p>
                 </div>
                 <div class="smallBoxL">
                     <img class="imgSmallBoxR" src="Images/Passout.png" />
                     <p>
-                        Shadow summon ultros spirit lance tantal greens haste bracer Ixion ranger. Umaro life cactuar godhand remedy thunder myrthril vest Diabolos thief. Shadow dispel cactuar missing score dragon scale shell diamond armor Bahamut ranger. Amarant water bomb lion heart amethyst haste thief gloves Titan dragoon.
+                        Learning can be tiring, so we encourage everyone to find a balance between study and relaxing. Remember! A relaxed mind learns easier than a stressed one!
                     </p>
                 </div>
             </article>
