--- a/FED1STUDIOProject/Team.html
+++ b/FED1STUDIOProject/Team.html
@@ -27,7 +27,8 @@
                 <h3>Zexion Westbrook</h3>
                 <img class="imgSmallHead" src="Images/headshot2.png" />
                 <p>
-                    Auron blizzaga judges ehrgeiz echo herbs regen rubber helm Siren puppetmaster. Ashe blizzard cactuar excalibur echo screen slowga power vest Cait Sith ranger. Sephiroth shell bahamut godhand phoenix down cura gaia gear Diabolos summoner. Rude summon ultima weapon onion knight magic lamp slow magician robe Yojimbo ranger. Lulu holy ultros ehrgeiz mythril ore hastega silk robe Ragnarok monk. Reno slowga cactuar hp shout tent summon shield armor Seraph monk. Ignis curaga malboro champion water crystal reflect rubber suit Odin ranger. Rinoa regen tonberry lion heart pearl firaga silk shirt Titan blue mage. Vincent Valentine bio gilgamesh lion heart mega-phoenix full-life chain mail Shiva scholar. Umaro blizzara magus sisters onion knight hi-ether ultima steepled hat Quetzalli puppetmaster.
+                    Mr. Westbrook is the lead instructor for the program. With over 15 years of experience in
+                    every role we teach, he was laid out a plan with the help of many others to provide the best learning course possible for students. He specializes in tanking and gathering.
                 </p>
                 <div class="clear"> </div>
             </article>
@@ -35,7 +36,7 @@
                 <h3>Sena Titania</h3>
                 <img class="imgSmallHead" src="Images/headshot1.png" />
                 <p>
-                    Zell blizzaga cactuar dragon's hair wind crystal haste bronze armor Hades puppetmaster. Terra regen bahamut lion heart echo herbs haste mythril helm Odin bard. Auron slow malboro shooting star sphere blizzaga demon's mail Kujata beastmaster. Jecht summon ultima weapon champion gysahl greens thundara thief hat Odin dragoon. Rikku slowga bahamut lion heart echo herbs water thunder gloves Titan bard. Quina water behemoth missing score diamond blizzara steepled hat Anima black mage. Eiko demi judges excalibur echo herbs protect silk shirt Shiva dancer. Tseng blizzaga adamantoise lion heart potion watera feather hat Titan red mage. Elena blizzaga ultros ehrgeiz magicite ultima thunder gloves Cait Sith monk. Kiros holy gilgamesh godhand dark matter summon feather hat Kujata white mage.
+                    Sena joined our school around 2015 and has been a valued partner ever since. Her knowledge of healing, crafting and roleplay and near unmatched. Since he joining she has flushed out the courses on this three topics to provide a grade A course program to ensure all have an easier time learning in these areas.
                 </p>
                 <div class="clear"> </div>
             </artilce>
@@ -43,7 +44,7 @@
                 <h3>Ghades Miller</h3>
                 <img class="imgSmallHead" src="Images/headhsot3.png" />
                 <p>
-                    Seifer drain magus sisters hp shout poison fang flare genji gloves Bahamut red mage. Sazh full-life flan onion knight mythril ore flare mantra band Carbuncle dragoon. Lenna fire gilgamesh premium heart turbo ether slowga leather gloves Carbuncle bard. Aeris limit break bomb ehrgeiz smelling salts bio circlet Garuda corsair. Dadaluma reflect sin premium heart light curtain drain tin armour Valefor summoner. Rude hastega behemoth onion knight turtle shell firaga power vest Leviathan samurai. Black Waltz waterga cactuar hp shout unicorn horn haste circlet Leviathan dark knight. Seymour Guado water bomb excalibur chocobo feather drain power vest Kujata summoner. Vaan ultima flan ehrgeiz malboro vine reflect linen cuirass Carbuncle black mage.
+                    Ghades leads the student relations department of our school. His time management and problem resolution skills have aided many students to allow them the ability to finish classes on par with other students and create a more relaxed envoriment for students who might have felt overly stressed. His door is always open and he welcomes anyone with open arms and an open mind.
                 </p>
                 <div class="clear"> </div>
             </article>
